Cambio de imagenes en las opciones

--- a/producto.html
+++ b/producto.html
@@ -99,26 +99,18 @@
                 <div class="product-color-options">
                     <div class="option">
                         <img src="assets/product_img.jpg" alt="" width="30px">
-                        <p>Negro</p>
-                    </div>
-                    <div class="option">
-                        <img src="assets/product_img.jpg" alt="" width="30px">
-                        <p>Verde</p>
-                    </div>
-                    <div class="option">
-                        <img src="assets/product_img.jpg" alt="" width="30px">
-                        <p>Rosa</p>
-                    </div>
-                    <div class="option">
-                        <img src="assets/product_img.jpg" alt="" width="30px">
                         <p>Azul</p>
                     </div>
                     <div class="option">
-                        <img src="assets/product_img.jpg" alt="" width="30px">
-                        <p>Morado</p>
+                        <img src="https://m.media-amazon.com/images/I/61mP9vPVqAL._AC_SL1000_.jpg" alt="" width="30px">
+                        <p>Verde</p>
                     </div>
                     <div class="option">
-                        <img src="assets/product_img.jpg" alt="" width="30px">
+                        <img src="https://m.media-amazon.com/images/I/51nedLybRJL._AC_SL1000_.jpg" alt="" width="30px">
+                        <p>Rosa</p>
+                    </div>
+                    <div class="option">
+                        <img src="https://m.media-amazon.com/images/I/61fE+nB3ZdS._AC_SL1000_.jpg" alt="" width="30px">
                         <p>Rojo</p>
                     </div>
                 </div>
